# react-native-windows

./: .clang-format  .clang-format-ignore  .cspell.json  .editorconfig  .eslintignore  .flowconfig  .gitattributes  .gitignore  .gitmodules  .ignore  .lgtm.yml  .lintstagedrc.json  .prettierignore  .prettierrc  .spelling  .unbroken_exclusions  .yarnrc.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeQL.yml  Directory.Build.props  Directory.Build.rsp  Directory.Build.targets  Examples.sln  GuardianCustomConfiguration.json  HelpPage.css  LICENSE  MILESTONE_081_ISSUES.md  MILESTONE_081_ISSUES_LIST.txt  NuGet.Config  PR-DESCRIPTION-59917946.txt  PR-DESCRIPTION-CLEAN.md  PR-DESCRIPTION-SDL-58386087.txt  PR.md  Packages.props  README.md  REVERT_NOTE.md  RNTester.sln  ReactScrollViewManager.cs  (+43 more)
RNWCPP/: .editorconfig  .npmignore  .npmrc  CHANGELOG.json  CHANGELOG.md  CMakeLists.txt  CopyHeaders.inc  Directory.Build.props  Directory.Build.targets  README.md  ReactWin32.nuspec  ReactWindows-CopyToStaging.bat  ReactWindows-TestNuspec.bat  ReactWindows-UWP.sln  ReactWindows.nuspec  ReactWindows.sln  dirs  index.js  make.inc  makewinrt.inc  package-deps.json  package.json  rn-cli.config.js  sources.inc
RNWCPP/.ado/: evergreen.js  evergreen.yml  publish.js  publish.yml  windows-vs-pr.yml
RNWCPP/Chakra/: Chakra.vcxitems  ChakraExecutor.cpp  ChakraExecutor.h  ChakraHelpers.cpp  ChakraHelpers.h  ChakraInstanceArgs.h  ChakraJsiRuntime.cpp  ChakraJsiRuntime.h  ChakraJsiRuntimeArgs.h  ChakraJsiRuntimeFactory.h  ChakraNativeModules.cpp  ChakraNativeModules.h  ChakraPlatform.cpp  ChakraPlatform.h  ChakraRuntime.cpp  ChakraRuntime.h  ChakraTracing.cpp  ChakraUtils.cpp  ChakraUtils.h  ChakraValue.cpp  ChakraValue.h  Utf8DebugExtensions.cpp  sources.inc
RNWCPP/ChakraCoreShim/: ChakraCoreShim.vcxproj  ChakraCoreShim.vcxproj.filters  README.md  Redirects.cpp  Redirects.h
RNWCPP/Desktop/: CMakeLists.txt  DevSupportManager.cpp  HttpResource.cpp  HttpResource.h  JSBigStringResourceDll.cpp  JSBigStringResourceDll.h  LazyDevSupportManager.cpp  LegacyWebSocket.cpp  NativeModuleFactories.h  React.Windows.Desktop.vcxproj  React.Windows.Desktop.vcxproj.filters  TimingModule.cpp  WebSocket.cpp  WebSocket.h  WebSocketJSExecutor.cpp  WebSocketJSExecutor.h  WebSocketJSExecutorFactory.cpp  WebSocketModule.cpp  msoFolly.h  packages.config  sources.inc
RNWCPP/Desktop.DLL/: CMakeLists.txt  React.Windows.Desktop.DLL.vcxproj  packages.config  react-native-win32.oss.x64.def  react-native-win32.oss.x86.def  react-native-win32.x64.def  react-native-win32.x86.def  react-native-win32.x86sdx.def
RNWCPP/Desktop.IntegrationTests/: DesktopTestInstance.cpp  DesktopTestRunner.cpp  RNTesterIntegrationTests.cpp  React.Windows.Desktop.IntegrationTests.vcxproj  TestMessageQueueThread.cpp  WebSocketIntegrationTest.cpp  WebSocketJSExecutorIntegrationTest.cpp  WebSocketModuleIntegrationTest.cpp  WebSocketResourcePerformanceTests.cpp  packages.config
RNWCPP/Desktop.UnitTests/: BaseWebSocketTests.cpp  BytecodeUnitTests.cpp  CMakeLists.txt  EmptyUIManagerModule.cpp  EmptyUIManagerModule.h  React.Windows.Desktop.UnitTests.vcxproj  React.Windows.Desktop.UnitTests.vcxproj.filters  StringConversionTest_Desktop.cpp  UIManagerModuleTest.cpp  UnicodeConversionTest.cpp  WebSocketJSExecutorTest.cpp  WebSocketTest.cpp  packages.config
RNWCPP/Folly/: Folly.vcxproj  Folly.vcxproj.filters
RNWCPP/FollyWin32/: FollyWin32.vcxproj  README.md
RNWCPP/IntegrationTests/: CMakeLists.txt  IntegrationTestsAppWin.js  LoggingTest.js  React.Windows.IntegrationTests.vcxproj  TestInstance.cpp  TestInstance.h  TestRootView.cpp  TestRootView.h  TestRunner.cpp  XHRTest.js  packages.config
RNWCPP/Playground/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Playground.csproj  Playground.sln  index.windows.js
RNWCPP/PropertySheets/: Debug.props  Warnings.props  Win32.props
RNWCPP/ReactCommon/: ReactCommon.vcxproj  ReactCommon.vcxproj.filters  packages.config  sources.inc
RNWCPP/ReactUWP/: CMakeLists.txt  ReactUWP.vcxproj  ReactUWP.vcxproj.filters  ThisHelper.h  ThisWrapper.h  dirs  make.inc
RNWCPP/ReactWin32SandboxSample/: JSQueueThread.cpp  JSQueueThread.h  NativeQueueThread.cpp  NativeQueueThread.h  ReactWin32SandboxSample.sln  ReactWin32SandboxSample.vcxproj  ReactWin32SandboxSample.vcxproj.filters  main.cpp  packages.config  stdafx.cpp  stdafx.h
RNWCPP/ReactWindowsCore/: AbiSafe.h  CMakeLists.txt  CreateModules.h  DevSettings.h  IHttpResource.h  INativeUIManager.h  IReactRootView.h  IUIManager.h  IWebSocket.h  InstanceManager.h  JSBigAbiString.cpp  JSBigAbiString.h  LayoutAnimation.cpp  LayoutAnimation.h  MemoryTracker.h  OInstance.h  ReactWindowsCore.vcxproj  ReactWindowsCore.vcxproj.filters  ShadowNode.cpp  ShadowNode.h  ShadowNodeRegistry.h  Tracing.h  UnicodeConversion.cpp  Utils.cpp  ViewManager.cpp  ViewManager.h  packages.config  sources.inc
RNWCPP/Scripts/: Bootstrap.ps1  IntegrationTests.ps1  Scripts.pssproj  UnitTest.ps1  build-windows.js  cli.js  just-task.js  just.js  launchPackager.bat  postInstall.js  preInstall.js  replaceRNDependency.js  run-desktop-integration-tests.js  start.js  update-facebook-master.js  update-rn-version.js  utils.js
RNWCPP/Shared/: CMakeLists.txt  Logging.cpp  OInstance.cpp  sources.inc
RNWCPP/Universal.IntegrationTests/: App.rd.xml  App.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  RNTesterIntegrationTests.cpp  React.Windows.Universal.IntegrationTests.vcxproj  React.Windows.Universal.IntegrationTests.vcxproj.filters  React.Windows.Universal.IntegrationTests_TemporaryKey.pfx  Universal.IntegrationTests_TemporaryKey.pfx  packages.config  pch.h
RNWCPP/Universal.SampleApp/: App.xaml.h  HostingPane.xaml  HostingPane.xaml.cpp  HostingPane.xaml.h  MainPage.xaml.cpp  Package.appxmanifest  React.Windows.Universal.SampleApp.vcxproj  React.Windows.Universal.SampleApp.vcxproj.filters  ViewLifetimeControl.h  WindowsSampleApp_TemporaryKey.pfx  accessible.uwp.js  bundle.js  button.uwp.js  control.uwp.js  flexbox.uwp.js  index.uwp.js  pch.cpp  simple.uwp.js  test.uwp.js  view.uwp.js
(+34493 files in other folders)
