add_subdirectory(Chakra)
add_subdirectory(ReactWindowsCore)
add_subdirectory(Shared)

if(WINRT)
	add_subdirectory(ReactUWP)
	add_subdirectory(Universal.UnitTests)
else()
	#TODO: Should we build all of these for WINRT too? The unit tests may provide extra validation
	add_subdirectory(Desktop)
	add_subdirectory(Desktop.DLL)
	add_subdirectory(Desktop.IntegrationTests)
	add_subdirectory(Desktop.UnitTests)
	add_subdirectory(IntegrationTests)
endif()
